The Properties space "search filter" disables checkboxes in panel headers when searching #114015

Closed
opened 2023-10-21 22:18:22 +02:00 by Jesse Yurkovich · 4 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24

Blender Version
Broken: version: 3.6.5, branch: blender-v3.6-release, commit date: 2023-10-16 14:30, hash: cf1e1ed46b7e
Broken: version: 3.5 and 4+ as well
Worked: 3.4.1 and 3.3.x LTS

Caused by 1eb90ee519

Short description of error
When using the search filter in the Properties space, the search refinement ends up disabling all checkboxes present in the panel headers.

Exact steps for others to reproduce the error

  • Go to the properties space -> Render properties -> using Eevee render engine
  • Enter "camera" in the search filter
  • Whoopsie...

Example from 3.3:
363.png

Example from 3.6:
365.png

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24 **Blender Version** Broken: version: 3.6.5, branch: blender-v3.6-release, commit date: 2023-10-16 14:30, hash: `cf1e1ed46b7e` Broken: version: 3.5 and 4+ as well Worked: 3.4.1 and 3.3.x LTS Caused by 1eb90ee519c4537be6ecd86b41cb5e7aa092581a **Short description of error** When using the search filter in the Properties space, the search refinement ends up disabling all checkboxes present in the panel headers. **Exact steps for others to reproduce the error** - Go to the properties space -> Render properties -> using Eevee render engine - Enter "camera" in the search filter - Whoopsie... Example from 3.3: ![363.png](/attachments/f7403f68-58de-44ce-9f89-c7d8f994ffa8) Example from 3.6: ![365.png](/attachments/1547c810-e3e4-408a-a72b-35e099e40447)
34 KiB
33 KiB
Jesse Yurkovich added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-21 22:18:22 +02:00
Pablo Vazquez added the
Module
User Interface
label 2023-10-21 23:11:56 +02:00
Member

Can confirm, will check when that broke

Can confirm, will check when that broke
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-10-23 12:16:21 +02:00
Member

Caused by 1eb90ee519

CC @HooglyBoogly

Caused by 1eb90ee519c4537be6ecd86b41cb5e7aa092581a CC @HooglyBoogly
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2023-10-23 13:10:04 +02:00
Hans Goudey self-assigned this 2023-10-23 13:33:51 +02:00

10 months ago

High priority?

> 10 months ago High priority?
Member

I was mistakingly assuming that checkboxes that are part of the search are also disfunctional (thus the high priority) but these are actually OK.

This could be lowered then, will leave up to @HooglyBoogly

I was mistakingly assuming that checkboxes that are part of the search are also disfunctional (thus the high priority) but these are actually OK. This could be lowered then, will leave up to @HooglyBoogly
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-24 16:08:39 +02:00
Dalai Felinto added
Type
Bug
Status
Confirmed
and removed
Type
Report
Status
Resolved
labels 2023-10-24 16:09:00 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114015
No description provided.