Fix #114015: Search filter removes panel header checkboxes

Caused by 1eb90ee519c4.

Co-authored by: Hans Goudey <hans@blender.org>